update dark light mode

--- a/_includes/partials/nav_skeleton.njk
+++ b/_includes/partials/nav_skeleton.njk
@@ -9,4 +9,7 @@
 {% for n in metadata.navbar %}<a href="{{n.url}}">{{n.nav}}</a>{% endfor %}
 </div>
 </div>
+  <div class="theme-container">
+    <button id="theme-toggle" class="mode-switcher" aria-label="Toggle Theme"></button>
+  </div>
 </navbar>
