--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ metadata.language }}">
+<html lang="{{ metadata.language }}"  data-bs-theme="dark>
 <head>
 {% include "partials/seo.njk" %}
 </head>
@@ -9,6 +9,5 @@
 {{content | safe}}
 </main>
 {% include "partials/footer.njk" %}
-<script type="module" src="{% getBundleFileUrl "js" %}"></script>
 </body>
 </html>
