--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -1,48 +1,33 @@
 <navbar class="navbar pt-5">
-<div class="dropdown">
-<button type="button" tabindex="0" class="hamburger navi-btn"  aria-label="Menu" onclick="myMenu()">
-<div class="bar1"></div>
-<div class="bar2"></div>
-<div class="bar3"></div>
-</button>
-<div id="myMenu" class="dropdown-content">
-{% for n in metadata.navbar %}<a href="{{n.url}}">{{n.nav}}</a>{% endfor %}
-</div>
-</div>
+  <div class="dropdown">
+    <button type="button" class="hamburger navi-btn" onclick="myMenu()">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </button>
+    <div id="myMenu" class="dropdown-content">
+      {% for n in metadata.navbar %}<a href="{{n.url}}">{{n.nav}}</a>{% endfor %}
+    </div>
+  </div>
+
 {%- if collections.posts %}
-{%- set previousPost = collections.posts | getPreviousCollectionItem %}
-{%- set nextPost = collections.posts | getNextCollectionItem %}
-{%- if nextPost or previousPost %}
-{%- if previousPost %}<br/><br/><br/>
-<a href="{{ previousPost.url }}" title="{{ previousPost.data.title }}" class="no-deco navis-btn taptoc">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 -3 16 16">
-  <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
-</svg></a>{% else %}
-<br/><br/><br/>
-<a href="{{ metadata.url }}" title="{{ metadata.title }}" class="no-deco  navis-btn taptoc">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 -3 16 16">
-  <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
-</svg></a>{% endif %}
-{%- if nextPost %}<br/><br/><br/>
-<a href="{{ nextPost.url }}" title="{{ nextPost.data.title }}" class="no-deco navis-btn pt-30 mt-5 taptoc">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 -3 16 16">
-  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
-</svg></a>{% else %}
-<br/><br/><br/>
-<a href="{{ metadata.url }}" title="{{ metadata.title }}" class="no-deco navis-btn pt-30 mt-5 taptoc">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 -3 16 16">
-  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
-</svg></a>{% endif %}
+  {%- set previousPost = collections.posts | getPreviousCollectionItem %}
+  {%- set nextPost = collections.posts | getNextCollectionItem %}
+  
+  {%- if previousPost %}
+    <a href="{{ previousPost.url }}" class="navis-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/></svg>
+    </a>
+  {% endif %}
+
+  {%- if nextPost %}
+    <a href="{{ nextPost.url }}" class="navis-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/></svg>
+    </a>
+  {% endif %}
 {%- endif %}
-{%- endif %}
-{% if pagination.href.previous %}<br/><br/><br/>
-<a href="{{ pagination.href.previous }}" title="Previous Page" class="no-deco navis-btn pt-30 mt-5 taptoc">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 -3 16 16">
-  <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
-</svg></a>{%- endif %}
-{% if pagination.href.next %}<br/><br/><br/>
-<a href="{{ pagination.href.next }}" title="Next Page" class="no-deco navis-btn pt-30 mt-5 taptoc">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 -3 16 16">
-  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
-</svg></a>{% endif %}
+
+  <div class="theme-container">
+    <button id="theme-toggle" class="mode-switcher" aria-label="Toggle Theme"></button>
+  </div>
 </navbar>
